# MetaAssembler

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake
conf/: base.config
scripts/: run_index.sh
src/: GraphEssential.cc  SG.h  extend_anchor.cpp  extend_anchor.h  main_extendAnchor.cpp  mergeSG.cpp  minimizer.cpp  minimizer.h  read_sg.cpp  reduced_alphabet.h  seq_index.cpp  sequence.h  string_graph.cpp  timer.h  translate.py  util_func.h  xxhash64.h
src/minimizer/: bio_alphabet.cpp  bio_alphabet.h  file.h  loader.cpp  loader.h  main_index.cpp  minimizer.cpp  seq_index.cpp  seq_index.h
